--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ nav{
     justify-content: space-between;
     padding: 100px;
     font-size: larger;
+    width: 70%;
+    
 
 }
 .nav-links{
@@ -34,11 +36,21 @@ nav{
     background-color: rgb(228, 81, 233);
     
 }
-
+#know-more-button{
+    height: 70px;
+    width: 60%;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    background-color: rgb(40, 40, 83);
+    color: white;
+}
 
 body{
     font-size: 20px;
     overflow-x: hidden;
+    background-color: rgb(238, 247, 247);
 }
 
 .improve-your-charge{
@@ -199,7 +211,7 @@ color: rgb(29, 29, 94);
     border-top-right-radius: 30px;
 }
 .settings{
-    width: 20%;
+    width: 30%;
     transform: rotate(10deg);
     background-color: white;
     padding: 20px;
@@ -254,6 +266,9 @@ color: rgb(29, 29, 94);
     display: flex;
     gap: 40px;
 }
+.download-appText{
+    padding-top: 200px;
+}
 .links{
     display: flex;
     gap: 100px;
@@ -279,4 +294,90 @@ color: rgb(29, 29, 94);
     color: white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     line-height: 40px;
+}
+
+@media screen and (max-width: 760px) {
+    nav{
+        display: block;
+        padding: 200px;
+    }
+    body{
+        overflow-x: hidden;
+    }
+    .improve-your-charge{
+        display: block;
+        width: 700%;
+        padding: 250px;
+    }
+    .icons{
+        display:block;
+        width:200%;
+        padding: 200px;
+    }
+    .products{
+        display: block;
+        padding: 200px;
+    
+
+    }
+    .products-left{
+        width: 500px;
+        /* height: 20px; */
+    }
+    .products-centre{
+        width: 500px;
+
+    }
+    .products-right{
+        width: 500px;
+
+    }
+
+    .numbers{
+        display: block;
+        width: 350%;
+    }
+    .mobile-app{
+        display: block;
+        width: 200%;
+    }
+    .words-from-clients{
+        display: block;
+        width: 200%;
+        margin-left: 20px;
+        padding-bottom: 40px;
+    }
+    .heading{
+        width: 400%;
+
+        
+    }
+    .download-app{
+        display: block;
+        padding-left: 100px;
+        width: 200%;
+        font-size: larger;
+    }
+    .download-appText{
+        padding: 100px;
+    
+    }
+    .footer{
+        display: block;
+        width: 450%;
+        
+    }
+    .copyright{
+        padding-right: 30px;
+    }
+    .links{
+        display: grid;
+    }
+    .settings{
+        width: 60%;
+    
+    }
+    .form{
+        width: 60%;
+    }
 }
